# factorio-launcher

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  REUSE.toml  SECURITY.md  THIRD_PARTY_NOTICES.md  pyproject.toml
apps/: CMakeLists.txt  README.md
apps/appkit/: README.md
apps/cli/: CMakeLists.txt  README.md  command_dispatch.c  command_dispatch.cpp  command_dispatch.h  facman.manifest  json_mode.c  json_mode.h  main.c
apps/cli/completions/: FacMan.ps1  _facman  facman.bash  facman.fish
apps/daemon/: CMakeLists.txt  README.md  cancellation.c  main.c  platform_named_pipe_windows.c  platform_unix_socket.c  progress_events.c  rpc_json.c
apps/factorio_cli/: README.md
apps/factorio_cli/src/: command_dispatch.c  command_dispatch.h  json_mode.c
apps/factorio_daemon/: README.md
apps/factorio_daemon/src/: cancellation.c  platform_named_pipe_windows.c  platform_unix_socket.c  progress_events.c
apps/factorio_tui/: README.md
apps/factorio_tui/src/: tui_main.c
apps/gtk/: README.md  meson.build
apps/gtk/src/: command_client.c  main.c
apps/gui/appkit/: CommandClient.mm  JsonRpcClient.mm  MainWindowController.m  README.md
apps/gui/gtk/: README.md  main.c
apps/gui/linux/gtk/: main.c  (+3 more)
apps/gui/qt/: README.md
apps/gui/win32/: MainForm.cs  Program.cs  README.md
apps/python_cli/factorio_launcher/: __init__.py
apps/qt/: CMakeLists.txt  README.md  command_client.cpp
apps/qt/src/: main.cpp
apps/qt/views/: README.md
apps/tui/: CMakeLists.txt  README.md  generated_command_catalog.hpp  tui_command_client.c  tui_command_client.cpp  tui_command_client.hpp  tui_guided_forms.cpp  tui_guided_forms.hpp  tui_main.c  tui_main.cpp  tui_views.c  tui_views.cpp  tui_views.hpp
apps/winforms/: README.md
apps/winforms/FactorioLauncher.WinForms/: MainForm.cs
runtime/archive/: CMakeLists.txt  README.md  fl_archive.h  fl_archive_platform.cpp  fl_archive_platform.h  fl_archive_policy.cpp  fl_archive_policy.h  fl_archive_reader.cpp  fl_archive_writer.cpp
runtime/base/: CMakeLists.txt  README.md  fl_local_operation_lock.cpp  fl_local_operation_lock.h  fl_path_safety.cpp  fl_path_safety.h  fl_sha256.cpp  fl_sha256.h
runtime/client/: CMakeLists.txt  README.md  facman_client.cpp  facman_client.h  facman_client_c.h  facman_client_internal.h  facman_client_model.h  facman_client_runtime.cpp  facman_process.h  facman_process_posix.cpp  facman_process_windows.cpp  facman_transport_daemon.cpp  facman_transport_daemon.h  facman_transport_direct.cpp  facman_transport_direct.h  facman_transport_process.cpp  facman_transport_process.h  fl_command_client.c  fl_command_client.h  fl_command_client_cabi.c  fl_command_client_cabi.h  fl_command_client_cabi_execute.c  fl_command_client_daemon.c  fl_command_client_daemon.h  fl_command_client_json.c  fl_command_client_json.h  workspace_resolver.cpp  workspace_resolver.h
runtime/core/: CMakeLists.txt  fl_identity.h  fl_result.h  fl_services.h
runtime/core/json/: fl_json.cpp  fl_json.h  fl_json_boundary.h  fl_json_boundary_c.h
runtime/core/permit/: fl_operation_permit.cpp  fl_operation_permit.h
runtime/factorio/: CMakeLists.txt  README.md
runtime/factorio/accounts/: README.md
runtime/factorio/application/: README.md  application_configuration.cpp  application_configuration.h  application_context.cpp  application_context.h  application_types.h  command_admission.cpp  command_admission.h  command_dispatch.cpp  command_dispatch.h  command_result.cpp  command_result.h  flb_factorio_application.cpp  flb_factorio_application.h  setup_gateway.cpp  setup_gateway.h
runtime/factorio/binding/: README.md  flb_api.c
runtime/factorio/compat/: README.md
runtime/factorio/diagnostics/: README.md  flb_factorio_diagnostics.cpp  flb_factorio_diagnostics.h
runtime/package/: CMakeLists.txt  README.md  fl_runtime_component.c  fl_runtime_component.cpp  fl_runtime_component.h  fl_runtime_extract.c  fl_runtime_extract.h  fl_runtime_locator.c  fl_runtime_locator.h  fl_runtime_manifest.c  fl_runtime_manifest.h  fl_runtime_verify.c  fl_runtime_verify.cpp  fl_runtime_verify.h
runtime/platform/: CMakeLists.txt  fl_file_io.cpp  fl_file_io.h  fl_process_supervisor.cpp  fl_process_supervisor.h  fl_process_supervisor_posix.cpp  fl_process_supervisor_windows.cpp  fl_random.h  fl_random_linux.cpp  fl_random_macos.cpp  fl_random_windows.cpp  fl_system_services.cpp  fl_system_services.h  fl_user_paths.h  fl_windows_path.h
runtime/preferences/: CMakeLists.txt  fl_preferences.cpp  fl_preferences.h
runtime/transaction/: CMakeLists.txt  fl_transaction.cpp  fl_transaction.h
runtime/workspace/: CMakeLists.txt  fl_workspace_store.cpp  fl_workspace_store.h
tests/installed_consumer/: CMakeLists.txt  flb_api_1_1.h  legacy_main.c  main.c
tests/native/: CMakeLists.txt  facman_abi_layout_smoke.cpp  facman_application_types_smoke.cpp  facman_client_smoke.cpp  facman_diagnostic_traversal_smoke.cpp  facman_execution_foundation_smoke.cpp  facman_hermetic_play_candidate_smoke.cpp  facman_isolation_lock_smoke.cpp  facman_isolation_probe.cpp  facman_operation_permit_fuzz.cpp  facman_operation_permit_fuzz_common.h  facman_operation_permit_libfuzzer.cpp  facman_operation_permit_smoke.cpp  facman_preferences_smoke.cpp  facman_process_pre_resume_smoke.cpp  facman_process_probe.cpp  facman_snapshot_policy_smoke.cpp  facman_tui_smoke.cpp  facman_workspace_resolver_smoke.cpp  fl_archive_core_smoke.cpp  fl_archive_libfuzzer.cpp  fl_archive_metadata_fuzz.cpp  fl_archive_plan_fuzz.cpp  fl_archive_probe.cpp  fl_json_core_smoke.cpp  fl_json_fuzz.cpp  fl_json_libfuzzer.cpp  fl_path_safety_smoke.cpp  fl_platform_io_smoke.cpp  fl_transaction_session_smoke.cpp  fl_workspace_store_smoke.cpp  flb_command_bridge_smoke.c  flb_factorio_discovery_smoke.cpp  flb_factorio_install_model_smoke.cpp  flb_factorio_instance_model_smoke.cpp  flb_factorio_launch_permit_smoke.cpp  flb_factorio_setup_recipe_smoke.cpp  flb_setup_gateway_smoke.cpp  gate4c_observer_broker_windows.cpp  gate4c_observer_broker_windows.h  (+8 more)
(+2461 files in other folders)
