cmake_minimum_required(VERSION 3.20)
project(facman LANGUAGES C CXX)

include(cmake/FacManOptions.cmake)
include(cmake/FacManPolicies.cmake)

set(CMAKE_POSITION_INDEPENDENT_CODE ON)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})

function(facman_append_env_candidate out_var env_name suffix)
  if(DEFINED ENV{${env_name}} AND NOT "$ENV{${env_name}}" STREQUAL "")
    file(TO_CMAKE_PATH "$ENV{${env_name}}" env_path)
    list(APPEND ${out_var} "${env_path}${suffix}")
    set(${out_var} "${${out_var}}" PARENT_SCOPE)
  endif()
endfunction()

function(facman_find_repo_root out_var repo_name specific_env)
  set(candidates)
  facman_append_env_candidate(candidates "${specific_env}" "")
  facman_append_env_candidate(candidates "FLAUNCH_UNIVERSAL_ROOT" "/${repo_name}")
  facman_append_env_candidate(candidates "FLAUNCH_WORKSPACE_ROOT" "/Universal/${repo_name}")
  facman_append_env_candidate(candidates "FLAUNCH_WORKSPACE_ROOT" "/${repo_name}")
  list(APPEND candidates
    "${CMAKE_CURRENT_SOURCE_DIR}/external/${repo_name}"
    "${CMAKE_CURRENT_SOURCE_DIR}/../${repo_name}"
    "${CMAKE_CURRENT_SOURCE_DIR}/../../Universal/${repo_name}"
    "${CMAKE_CURRENT_SOURCE_DIR}/../../${repo_name}"
    "${CMAKE_CURRENT_SOURCE_DIR}/../../../Universal/${repo_name}"
    "${CMAKE_CURRENT_SOURCE_DIR}/../../../${repo_name}")
  foreach(candidate IN LISTS candidates)
    if(EXISTS "${candidate}/CMakeLists.txt")
      set(${out_var} "${candidate}" PARENT_SCOPE)
      return()
    endif()
  endforeach()
  list(GET candidates 0 fallback)
  set(${out_var} "${fallback}" PARENT_SCOPE)
endfunction()

function(facman_select_repo_root cache_var repo_name specific_env)
  if(NOT DEFINED ${cache_var} OR NOT EXISTS "${${cache_var}}/CMakeLists.txt")
    facman_find_repo_root(selected_path "${repo_name}" "${specific_env}")
    if(DEFINED ${cache_var} AND NOT "${${cache_var}}" STREQUAL "" AND NOT EXISTS "${${cache_var}}/CMakeLists.txt")
      message(STATUS "Ignoring unavailable ${repo_name} path: ${${cache_var}}")
    endif()
    set(${cache_var} "${selected_path}" CACHE PATH "Path to the ${repo_name} repository" FORCE)
  endif()
endfunction()

facman_select_repo_root(FLAUNCH_UNIVERSAL_SETUP_ROOT "universal-setup" "FLAUNCH_UNIVERSAL_SETUP_ROOT")
facman_select_repo_root(FLAUNCH_UNIVERSAL_LAUNCHER_ROOT "universal-launcher" "FLAUNCH_UNIVERSAL_LAUNCHER_ROOT")

if(FACMAN_BUILD_TESTS)
  enable_testing()
endif()

add_subdirectory(external)
add_subdirectory(runtime/core)
add_subdirectory(runtime/platform)
add_subdirectory(runtime/base)
add_subdirectory(runtime/workspace)
add_subdirectory(runtime/archive)
add_subdirectory(runtime/transaction)
add_subdirectory(runtime/preferences)
add_subdirectory(runtime/package)

if(FACMAN_WITH_SETUP AND NOT TARGET usk_static)
  if(EXISTS "${FLAUNCH_UNIVERSAL_SETUP_ROOT}/CMakeLists.txt")
    add_subdirectory("${FLAUNCH_UNIVERSAL_SETUP_ROOT}" "${CMAKE_CURRENT_BINARY_DIR}/universal-setup")
  else()
    message(FATAL_ERROR "universal-setup is required when FACMAN_WITH_SETUP=ON")
  endif()
endif()
if(NOT TARGET ulk_static)
  if(EXISTS "${FLAUNCH_UNIVERSAL_LAUNCHER_ROOT}/CMakeLists.txt")
    add_subdirectory("${FLAUNCH_UNIVERSAL_LAUNCHER_ROOT}" "${CMAKE_CURRENT_BINARY_DIR}/universal-launcher")
  else()
    message(FATAL_ERROR "universal-launcher is required")
  endif()
endif()

add_subdirectory(runtime/factorio)
add_subdirectory(runtime/client)
add_subdirectory(apps)
if(FACMAN_BUILD_TESTS)
  add_subdirectory(tests/native)
endif()

include(cmake/FacManInstall.cmake)
