add_library(facman_core_static STATIC json/fl_json.cpp)
target_include_directories(facman_core_static PUBLIC ${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_SOURCE_DIR}/json)
target_compile_features(facman_core_static PUBLIC cxx_std_17)
target_link_libraries(facman_core_static PRIVATE picojson_headers)
add_library(facman::core ALIAS facman_core_static)
facman_apply_policies(facman_core_static)
